--- a/.editorconfig
+++ b/.editorconfig
@@ -2,9 +2,10 @@ root = true
 
 [*]
 charset = utf-8
-end_of_line = crlf
+end_of_line = lf
 insert_final_newline = true
-indent_style = tab
+indent_style = space
+indent_size = 4
 trim_trailing_whitespace = true
 
 [*.md]
@@ -12,4 +13,3 @@ trim_trailing_whitespace = false
 
 [*.yml]
 indent_size = 2
-indent_style = space
